--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,10 @@
             "request": "launch",
             "module": "uvicorn",
             "args": [
-                "main:app",
+                "app.main:app",
                 "--reload",
+                "--host",
+                "0.0.0.0",
                 "--port",
                 "4000"
             ],
